# audio2instrument

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: BASS_EXPRESSIVE_V3.md  BASS_MULTISAMPLE_POC.md  BASS_POC.md  BASS_VELOCITY_V4.md  FULL_COVER_SYNTH_BREADTH.md  GUITAR_DRUM_BREADTH_POC.md  PIANO_POLYPHONY_RISK_POC.md  STEMFORGE_COMPARISON.md  STRICT_SINGLE_EVENT_SAMPLING.md
src/audio2instrument/: __init__.py  audio.py  cli.py  drum_poc.py  expressive.py  expressive_poc.py  guitar_risk_poc.py  inventory.py  loop.py  mapping.py  metrics.py  midi.py  multisample_poc.py  piano_risk.py  piano_risk_poc.py  poc.py  render.py  sample_layout.py  sfz.py  sound_groups.py  strict_isolation.py  synth_confidence.py  synth_confidence_cli.py  velocity.py  velocity_poc.py  volume_automation.py
tests/: test_audio.py  test_drum_poc.py  test_expressive.py  test_guitar_drum_cli.py  test_guitar_risk_poc.py  test_inventory.py  test_loop.py  test_mapping.py  test_midi.py  test_multisample_poc.py  test_piano_risk.py  test_piano_risk_cli.py  test_poc.py  test_render.py  test_sample_layout.py  test_sfz.py  test_smoke.py  test_sound_groups.py  test_strict_isolation.py  test_synth_confidence.py  test_synth_confidence_cli.py  test_velocity.py  test_velocity_cli.py  test_velocity_poc.py  test_volume_automation.py
