[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "audio2instrument"
version = "0.1.0"
description = "Reconstruct a playable sample instrument from aligned audio and MIDI."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "ChrisTorng" }]
dependencies = [
  "mido>=1.3,<2",
  "numpy>=1.26,<3",
  "scipy>=1.11,<2",
  "soundfile>=0.12,<1",
]

[project.optional-dependencies]
dev = ["pytest>=8,<10", "ruff>=0.6,<1"]

[project.scripts]
audio2instrument = "audio2instrument.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py311"
line-length = 100
